--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,18 @@ spring.application.name=jobms
 server.port=8082
 
 # Database configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/jobms
+spring.datasource.url=jdbc:postgresql://localhost:5433/jobs_db
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.database=POSTGRESQL
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+# dev properties
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+# Info
+info.app.name=Job Management System
+info.app.description=Microservice for managing jobs
+info.app.version=1.0.0
