--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>jobms</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>jobms</name>
-	<description>Demo project for Spring Boot</description>
+	<description>The microservice for managing jobs in the job application</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
